--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,12 +5,19 @@
         <mat-label>Username</mat-label>
         <input matInput formControlName="username" required>
       </mat-form-field>
+      <div
+        *ngIf="submitted && username?.invalid">
+        <div *ngIf="username?.errors?.['required']" class="text-danger text-">Username is required</div>
+      </div>
     </div>
     <div>
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
         <input matInput formControlName="password" required>
       </mat-form-field>
+      <div *ngIf="submitted && password?.invalid">
+        <div *ngIf="password?.errors?.['required']" class="text-danger">Password is required</div>
+      </div>
     </div>
     <div fxLayoutAlign="center">
       <button mat-stroked-button>Login</button>
