Save cart to local storage

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -70,7 +70,7 @@
           </mat-form-field>
           <mat-form-field appearance="fill">
             <mat-label>CVC</mat-label>
-            <input matInput formControlName="cvc" required maxlength="3">
+            <input matInput formControlName="cvc" required maxlength="3" type="number">
           </mat-form-field>
         </div>
         <div>
