--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <a style="padding: 0; margin: 0" routerLink="/about">
+  <a style="padding: 0; margin: 0" routerLink="/listings">
     <img class="logo" src="../../assets/images/thumb/MWLtransparent.png" alt="logo">
   </a>
   <span class="spacer"></span>
