--- a/src/app/listings/listings.component.html
+++ b/src/app/listings/listings.component.html
@@ -23,7 +23,7 @@
     <a class="category-link">CHRISTMAS</a>
   </button>
 </div>
-<div class="content" fxLayoutAlign="center center">
+<div class="content pb-5" fxLayoutAlign="center center">
   <div fxLayout="row wrap" fxLayoutGap="30px grid" fxFlex="90%">
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let listing of filteredListings">
       <mat-card class="mat-elevation-z3" tabindex="0">
@@ -33,7 +33,7 @@
           <h2>{{listing.price}} $</h2>
         </mat-card-content>
         <mat-card-actions align="end">
-          <button mat-icon-button *ngIf="isAdmin">
+          <button mat-icon-button *ngIf="isAdmin" (click)="delete(listing)">
             <mat-icon>delete_outline</mat-icon>
           </button>
           <button mat-flat-button routerLink="/listings/{{listing.id}}" [disabled]="listing.inStock == 0">
