Login and register validation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,68 @@
-<div style="height: 595px" fxLayoutAlign="center center">
-  <form [formGroup]="loginFormGroup">
+<div fxLayout="column" fxLayoutAlign="center center" style="height: 595px">
+  <form [formGroup]="loginFormGroup" *ngIf="loginMode" (ngSubmit)="onSubmit()">
     <div>
       <mat-form-field appearance="outline">
-        <mat-label>Username</mat-label>
-        <input matInput formControlName="username" required>
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" required>
       </mat-form-field>
       <div
-        *ngIf="submitted && username?.invalid">
-        <div *ngIf="username?.errors?.['required']" class="text-danger text-">Username is required</div>
+        *ngIf="email?.invalid && (email?.dirty || email?.touched)">
+        <div *ngIf="email?.errors?.['required']" class="text-danger text-">Email is required</div>
+        <div *ngIf="email?.errors?.['email']" class="text-danger text-">Invalid email</div>
       </div>
     </div>
     <div>
       <mat-form-field appearance="outline">
         <mat-label>Password</mat-label>
-        <input matInput formControlName="password" required>
+        <input matInput formControlName="password" required type="password">
       </mat-form-field>
-      <div *ngIf="submitted && password?.invalid">
+      <div *ngIf="password?.invalid && (password?.dirty || password?.touched)">
         <div *ngIf="password?.errors?.['required']" class="text-danger">Password is required</div>
       </div>
     </div>
     <div fxLayoutAlign="center">
-      <button mat-stroked-button>Login</button>
+      <button mat-stroked-button type="submit" [disabled]="loginFormGroup.invalid">Login</button>
     </div>
   </form>
+
+  <form [formGroup]="registerFormGroup" *ngIf="!loginMode" (ngSubmit)="onSubmit()">
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" required>
+      </mat-form-field>
+      <div
+        *ngIf="registerEmail?.invalid && (registerEmail?.dirty || registerEmail?.touched)">
+        <div *ngIf="registerEmail?.errors?.['required']" class="text-danger text-">Email is required</div>
+        <div *ngIf="registerEmail?.errors?.['email']" class="text-danger text-">Invalid email</div>
+      </div>
+    </div>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input matInput formControlName="password" required type="password">
+      </mat-form-field>
+      <div *ngIf="registerPassword?.invalid && (registerPassword?.dirty || registerPassword?.touched)">
+        <div *ngIf="registerPassword?.errors?.['required']" class="text-danger">Password is required</div>
+      </div>
+    </div>
+    <div>
+      <mat-form-field appearance="outline">
+        <mat-label>Repeat password</mat-label>
+        <input matInput formControlName="repeatPassword" required type="password">
+      </mat-form-field>
+      <div
+        *ngIf="repeatPassword?.invalid && (repeatPassword?.dirty || repeatPassword?.touched)">
+        <div *ngIf="repeatPassword?.errors?.['required']" class="text-danger text-">Repeated password is required</div>
+        <div *ngIf="repeatPassword?.errors?.['notSame']" class="text-danger text-">Passwords must match</div>
+      </div>
+    </div>
+    <div fxLayoutAlign="center">
+      <button mat-stroked-button type="submit" [disabled]="registerFormGroup.invalid">Register</button>
+    </div>
+  </form>
+
+  <div fxLayoutAlign="center start" class="mt-3">
+    <button mat-stroked-button (click)="registerMode()">{{loginMode ? 'Register' : 'Login'}}</button>
+  </div>
 </div>
