--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,4 +18,10 @@
   <a class="links pe-5" routerLink="/cart">
     <mat-icon matBadge="{{itemCount}}" matBadgeSize="medium" matBadgePosition="below" matBadgeOverlap="false" class="cartIcon" color="accent">shopping_cart</mat-icon>
   </a>
+  <span class="pe-3" style="color: #946c5a" *ngIf="isLoggedIn">
+    <a class="links" (click)="logout()" style="cursor:pointer;">Logout</a>
+  </span>
+  <span class="pe-3" style="color: #946c5a" *ngIf="!isLoggedIn">
+    <a class="links" routerLink="/login">Login</a>
+  </span>
 </mat-toolbar>
