--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -16,14 +16,14 @@
     </div>
     <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
       <div class="p-5">
-        <img src="assets/images/full/about2.JPG" alt="doily">
+        <img src="https://i.ibb.co/FgxZXts/about2.jpg" alt="doily">
       </div>
     </div>
   </div>
   <div fxLayout="row">
     <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
       <div class="p-5">
-        <img src="assets/images/full/about1.JPG" alt="doily">
+        <img src="https://i.ibb.co/gFBhn5V/about1.jpg" alt="doily">
       </div>
     </div>
     <div fxLayoutAlign="center" fxFlex class="mat-elevation-z0">
