--- a/src/app/add-or-edit/add-or-edit.component.html
+++ b/src/app/add-or-edit/add-or-edit.component.html
@@ -32,6 +32,12 @@
   </div>
   <div>
     <mat-form-field appearance="outline" color="accent">
+      <mat-label>Thumb Image URL</mat-label>
+      <input matInput formControlName="thumbImgUrl" required>
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field appearance="outline" color="accent">
       <mat-label>Image URL</mat-label>
       <input matInput formControlName="imageUrl" required>
     </mat-form-field>
