Project structure refactor

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <a style="padding: 0; margin: 0" routerLink="/listings">
-    <img class="logo" src="../../assets/images/thumb/MWLtransparent.png" alt="logo">
+    <img class="logo" src="../../../assets/images/thumb/MWLtransparent.png" alt="logo">
   </a>
   <span class="spacer"></span>
   <span class="pe-3" style="color: #946c5a">
@@ -10,10 +10,10 @@
     <a class="links" routerLink="/listings">Webshop</a>
   </span>
   <button mat-icon-button aria-label="facebook icon" (click)="navigatePinterest()">
-    <img class="iconImg" src="../../assets/images/thumb/pinterest.png">
+    <img class="iconImg" src="../../../assets/images/thumb/pinterest.png">
   </button>
   <button mat-icon-button aria-label="instagram icon" (click)="navigateInsta()">
-    <img class="iconImg" src="../../assets/images/thumb/instagram.png">
+    <img class="iconImg" src="../../../assets/images/thumb/instagram.png">
   </button>
   <a class="links pe-5" routerLink="/cart">
     <mat-icon matBadge="{{itemCount}}" matBadgeSize="medium" matBadgePosition="below" matBadgeOverlap="false" class="cartIcon" color="accent">shopping_cart</mat-icon>
